[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["yuta0306 <yuta20010306@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
online-judge-tools = "^11.5.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
